# dome

./: .gitignore  .rustfmt.toml  API.http  Cargo.toml
src/: config.rs  environment.rs  lib.rs  logging.rs
src/adapter/: secret.rs
src/domain/: cipher.rs  encrypted_text.rs  mod.rs  plain_text.rs  secret.rs
src/endpoint/: mod.rs
src/endpoint/secret/: create.rs  mod.rs
src/gateway/: mod.rs  secret.rs
src/gateway/secret/: implementation.rs  mod.rs
src/http/: config.rs  macros.rs  mod.rs  server.rs
src/usecase/secret/: create.rs  mod.rs
