[package]
name = "dome"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = { version = "0.10.3", features = ["default"] }
url = "2.5.2"
hex = "0.4.3"
derivative = "2.2.0"
axum = "0.7.7"
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
mime = "0.3.17"


[dev-dependencies]
fake = { version = "2.10.0", features = ["url"] }
quickcheck = "1.0.3"
tower = "0.5.1"
serde_json = "1.0.132"
http-body-util = "0.1.2"